# scitex-container

./: .env.example  .envrc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/ci/: build-in-sif.sh  publish-in-sif.sh  run-in-sif.sh
.github/workflows/: ci.yml  cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-container-quality-audit-on-ubuntu-latest.yml  test.yml
docs/sphinx/: cli_reference.rst  conf.py  mcp_reference.rst  quickstart.rst
examples/: 00_run_all.sh  01_list_python_apis.sh  02_cli_help.sh  03_python_api.py  04_mcp_tools.sh  05_env_snapshot.py  quickstart.py
examples/03_python_api_out/FINISHED_SUCCESS/2026Y-05M-27D-18h52m01s_gksn-main/: api_report.json
examples/05_env_snapshot_out/FINISHED_SUCCESS/2026Y-05M-27D-18h52m25s_jOVb-main/: snapshot_basic.json  snapshot_with_repos.json
src/scitex_container/: __init__.py  _compat.py  _snapshot.py  mcp_server.py
src/scitex_container/_cli/: __init__.py  _apptainer.py  _docker.py  _env_snapshot.py  _host.py  _mcp.py  _sandbox.py  _skills.py  _status.py
src/scitex_container/_mcp/: handlers.py
src/scitex_container/_skills/scitex-container/: 01_installation.md  01_quick-start.md  02_python-api.md  02_quick-start.md  03_python-api-sandbox.md  03_python-api.md  04_cli-reference.md  04_python-api-builders.md  05_python-api-docker-host.md  10_cli-reference.md  11_mcp-tools.md  12_quick-start.md  13_python-api.md  14_python-api-sandbox.md  15_python-api-builders.md  16_python-api-docker-host.md  17_cli-reference-detailed.md  20_environment.md  SKILL.md  cli-reference.md  environment.md  mcp-tools.md  python-api.md  quick-start.md
src/scitex_container/_sphinx_html/: .buildinfo  cli_reference.html  genindex.html  index.html  installation.html  mcp_reference.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
src/scitex_container/_sphinx_html/.doctrees/: cli_reference.doctree  environment.pickle  index.doctree  installation.doctree  mcp_reference.doctree  quickstart.doctree
src/scitex_container/_sphinx_html/.doctrees/__intersphinx_cache__/: click_objects.inv
src/scitex_container/_sphinx_html/.doctrees/api/: scitex_container.doctree
src/scitex_container/_sphinx_html/_modules/: index.html
src/scitex_container/_sphinx_html/_modules/scitex_container/: _snapshot.html
src/scitex_container/_sphinx_html/_modules/scitex_container/apptainer/: _build.html  _command_builder.html  _config.html  _freeze.html  _lockgen.html  _reproducible.html  _sandbox.html  _sandbox_versioning.html  _status.html  _store.html  _utils.html  _verify.html  _versioning.html
src/scitex_container/_sphinx_html/_modules/scitex_container/docker/: _compose.html  _mounts.html
src/scitex_container/_sphinx_html/_modules/scitex_container/host/: _mounts.html  _packages.html
src/scitex_container/_sphinx_html/api/: scitex_container.html
src/scitex_container/apptainer/: __init__.py  _build.py  _command_builder.py  _config.py  _freeze.py  _lockgen.py  _overlay.py  _reproducible.py  _sandbox.py  _sandbox_versioning.py  _shell_command.py  _status.py  _store.py  _utils.py  _verify.py  _versioning.py
src/scitex_container/docker/: _compose.py  _mounts.py
src/scitex_container/host/: _mounts.py  _packages.py
src/scitex_container/skills/: SKILL.md  quick-start.md
tests/: conftest.py  test_cli.py  test_snapshot.py  test_utils.py
tests/develop/: test_audit.py
tests/examples/: test_01_list_python_apis.py  test_02_cli_help.py  test_03_python_api.py  test_04_mcp_tools.py  test_05_env_snapshot.py  test_quickstart.py
tests/integration/: test_cli.py  test_cross_package_imports.py  test_examples.py  test_imports.py
tests/scitex_container/: test__snapshot.py
tests/scitex_container/_cli/: test__apptainer.py  test__docker.py  test__env_snapshot.py  test__host.py  test__mcp.py  test__sandbox.py  test__status.py
tests/scitex_container/_mcp/: test_handlers.py
tests/scitex_container/apptainer/: test__build.py  test__command_builder.py  test__config.py  test__lockgen.py  test__overlay.py  test__reproducible.py  test__reproducible_roundtrip.py  test__store.py  test__utils.py
tests/scitex_container/docker/: test__compose.py  test__mounts.py
tests/scitex_container/host/: test__mounts.py  test__packages.py
