[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-container"
version = "0.2.0"
description = "Unified container management for Apptainer and Docker"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" },
]
keywords = ["scitex", "apptainer", "singularity", "docker", "container", "sandbox", "mcp"]

dependencies = [
    "click",
    "packaging",
    "pyyaml",                # reproducible-build config at <root>/config.yaml
    "scitex-dev>=0.11.7",
    "scitex-config>=0.3.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.0.0",
]
dev = [
    "fastmcp>=2.0.0",                # tests/integration/test_skills_quality.py + mcp tool surface
    "pytest-cov>=4.0.0",
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",         # .github/workflows/test.yml uses --timeout=120
    "scitex-dev[cli-audit]>=0.11.7", # tests/develop/test_audit.py needs the `scitex-dev` CLI
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-container[mcp]",
]

[project.scripts]
scitex-container = "scitex_container._cli:main"
scitex-container-mcp = "scitex_container.mcp_server:main"

[project.entry-points."scitex_dev.docs"]
scitex-container = "scitex_container"

[project.entry-points."scitex_dev.skills"]
scitex-container = "scitex_container"

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-container"
Documentation = "https://scitex-container.readthedocs.io"
Repository = "https://github.com/ywatanabe1989/scitex-container.git"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_container"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples"]

[tool.scitex_dev]
# §6 (MCP parity) — scitex-container exposes a curated agentic surface
# (14 tools), not a 1:1 mirror of its 70 Python helpers. Internal helpers
# such as apptainer_build_exec_args, apptainer_compare_locks, host_get_mount_config
# are CLI / Python building blocks, not agent-facing primitives. Declare
# the curated set so the §6 check verifies exact parity against this list
# instead of demanding wrappers for every public helper. (Canonical
# alternative to a blanket `mcp_parity_exempt = true`, kept finer-grained
# so adding/removing a real tool is still caught.)
#
# Names are bare (no `container_` prefix); the auditor normalizes both
# sides. `skills_list` / `skills_get` are always implicitly permitted.
mcp_tools_allowlist = [
    "build",            # container_build
    "list_versions",    # container_list_versions
    "switch",           # container_switch
    "rollback",         # container_rollback
    "deploy",           # container_deploy
    "cleanup",          # container_cleanup
    "status",           # container_status
    "sandbox_create",   # sandbox_create
    "docker_rebuild",   # docker_rebuild
    "docker_restart",   # docker_restart
    "host_install",     # host_install
    "host_check",       # host_check
    "verify",           # container_verify
    "env_snapshot",     # container_env_snapshot
]

[tool.coverage.run]
parallel = true
source = ["scitex_container"]
concurrency = ["multiprocessing", "thread"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
